pxc/tests/test_19_thread/thrtest2.px

namespace ttest;
import thread "";
import io;

function void hoge(int x) {
  io::main.stdout_println(x);
}

multithreaded struct my_thread_obj(int x0, int y0, io::ioptr const& io0) {
  int x = x0;
  int y = y0;
  io::ioptr io = io0;
  function void main() {
    io.stdout_println("my thread main");
    io.stdout_println(x);
    hoge(y); // error: calling global function
    // io.stdout_println(hoge); // error
    // io::main.stdout_println(y); // error
  }
}

function void test1()
{
  thread_t thr = create_thread(my_thread_obj(123, 456, io::main));
  thr.join();
}

test1();
